# Cgameoflife

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
shaders/: bloom.fs
src/app/: canvas.c  canvas.h  window.c  window.h
src/draw/: cell.c  draw_cell.c  draw_cell.h  draw_grid.c  draw_grid.h
src/input/: cells.c  cells.h  input.c  input.h  input_handlers.c  input_handlers.h  mouse.c  mouse.h
src/logic/: automata.c  automata.h  cell.c  cell.h  cell_utils.c  cell_utils.h  convay_rules.c  convay_rules.h  grid.c  grid.h  grid_utils.c  grid_utils.h  logic.c  logic.h  rules.c  rules.h
src/presentation/: canvas.h  window.h
src/sound/: sound.c  sound.h
src/ui/: debug.c
src/utils/: drawUtils.c
test/: CMakeLists.txt  test.c  test_main.c  test_suite.h
